[build-system]
requires = ["setuptools>=62.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ayt-api"
authors = [
  { name="Revnoplex", email="revnoplex.business@protonmail.com" },
]
description = "An Asynchronous, Object oriented python library for the YouTube api"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/Revnoplex/ayt-api"
"Repository" = "https://github.com/Revnoplex/ayt-api"
"Bug Tracker" = "https://github.com/Revnoplex/ayt-api/issues"

[tool.setuptools]
packages = ["ayt_api"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ayt_api.__version__"}
dependencies = {file = "requirements.txt"}
